--- a/Remake/TODO
+++ b/Remake/TODO
@@ -3,4 +3,4 @@
 3. Add a autoclicker
 4. Add more news
 5. Add a guide (similar to help menu) [nAn]
-6. Move Main Method to ControllerR
+6. Move Main Method to ControllerR [DONE]
